update workflow AWS_REGION

--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -10,7 +10,7 @@ permissions:
   contents: read
   
 env:
-  AWS_REGION: us-east-1
+  AWS_REGION: ${{ secrets.AWS_REGION }}
   ECR_REPOSITORY: fein-base
   IMAGE_TAG: latest
 
